add simple true false quizzes based on answer, give result at bottom of page

--- a/index.html
+++ b/index.html
@@ -239,8 +239,6 @@
                 <option value="css">css</option>
                 <option value="javaScript">javaScript</option>
                 <option value="c">C#</option>
-                <option value="net">.NET</option>
-                <option value="ruby">Ruby</option>
                 <option value="php">PHP</option>
                 <option value="drupal">Drupal</option>
               </select>
@@ -266,6 +264,71 @@
               <h3>Results</h3>
               <span class="javaResults"></span>
             </div><!--end JavaQuiz Section-->
+            <div class="bad">
+              <h3>CSS Quiz</h3>
+              <form id="cssQuiz">
+                <label for="cssQuiz">True or False: CSS is short for Computer Storage Style and it is used to backup websites.</label>
+                <select class="form-control" id="cssTF">
+                  <option value="true">True</option>
+                  <option value="false">False</option>
+                </select>
+                <button type="submit" name="button" class="btn btn-warning">Check Answers</button>
+              </form>
+              <h3>Results</h3>
+              <span class="cssResults"></span>
+            </div><!--end cssQuiz Section-->
+            <div class="javaScriptQuiz">
+              <h3>JavaScript Quiz</h3>
+              <form id="jsQuiz">
+                <label for="jsQuiz">True or False: JavaScript is an object-oriented computer programming language commonly used to create interactive effects within web browsers.</label>
+                <select class="form-control" id="jsTF">
+                  <option value="true">True</option>
+                  <option value="false">False</option>
+                </select>
+                <button type="submit" name="button" class="btn btn-warning">Check Answers</button>
+              </form>
+              <h3>Results</h3>
+              <span class="jsResults"></span>
+            </div><!--end javaScriptQuiz Section-->
+            <div class="cQuiz">
+              <h3>C# Quiz</h3>
+              <form id="cSharpQuiz">
+                <label for="cQuiz">True or False: C# enables developers to build applications that run on the .NET framework.</label>
+                <select class="form-control" id="cTF">
+                  <option value="true">True</option>
+                  <option value="false">False</option>
+                </select>
+                <button type="submit" name="button" class="btn btn-warning">Check Answers</button>
+              </form>
+              <h3>Results</h3>
+              <span class="cResults"></span>
+            </div><!--end c Quiz Section-->
+            <div class="phpQuiz">
+              <h3>PHP Quiz</h3>
+              <form id="pQuiz">
+                <label for="phpsQuiz">True or False: PHP stands for Hypertext Preprocessor</label>
+                <select class="form-control" id="phpTF">
+                  <option value="true">True</option>
+                  <option value="false">False</option>
+                </select>
+                <button type="submit" name="button" class="btn btn-warning">Check Answers</button>
+              </form>
+              <h3>Results</h3>
+              <span class="phpResults"></span>
+            </div><!--end php Quiz Section-->
+            <div class="drupQuiz">
+              <h3>PHP Quiz</h3>
+              <form id="drupalQuiz">
+                <label for="drupalQuiz">True or False: Drupal is an open source content-management framework written in markdown language.</label>
+                <select class="form-control" id="drupalTF">
+                  <option value="true">True</option>
+                  <option value="false">False</option>
+                </select>
+                <button type="submit" name="button" class="btn btn-warning">Check Answers</button>
+              </form>
+              <h3>Results</h3>
+              <span class="drupalResults"></span>
+            </div><!--end php Quiz Section-->
 
 
           </div><!--end language quizzes column-->
