add additional style. Jumbotron becomes an orange gadient and blue footer added.

--- a/index.html
+++ b/index.html
@@ -339,5 +339,10 @@
 
 
     </div><!--end container-->
+    <footer>
+      <div class="footer">
+      </div>
+    </footer>
   </body>
+
 </html>
