add more color style

--- a/index.html
+++ b/index.html
@@ -228,7 +228,9 @@
           </div><!-- end panel-->
         </div><!--end column 2-->
       </div><!--end row-->
-      <div class="row quiz"><!--start second row-->
+    </div> <!--end container-->
+    <div class="container-fluid">
+      <div class="row quiz testknow"><!--start second row-->
         <div class="col-md-12">
           <h2>Test your Knowledge with a Quiz</h2>
           <form id="selectLanguage">
@@ -243,7 +245,7 @@
                 <option value="drupal">Drupal</option>
               </select>
             </div>
-            <button type="submit" name="button" class="btn btn-lg btn-warning">Start Quiz</button>
+            <button type="submit" name="button" class="btn btn-lg btn-primary">Start Quiz</button>
           </form>
         </div><!--end col-->
       </div><!--end second row-->
