added more information to the inconclusive track result

--- a/index.html
+++ b/index.html
@@ -216,6 +216,32 @@
                   <p>
                     We are pleased to inform you that you would be a good fit for any of our tracks at Epicodus. Check out our course descriptions to help you make your decision.
                   </p>
+                  <p>
+                    Currently, Epicodus offers the following tracks in Portland and Seattle:
+                  </p>
+                  <br>
+                  </br>
+                  <ul>
+                    <li>
+                      Ruby/Rails
+                    </li>
+                    <li>
+                      PHP/Drupal
+                    </li>
+                    <li>
+                      Java/Android
+                    </li>
+                    <li>
+                      CSS/Design
+                    </li>
+                    <li>
+                      C#/.NET
+                    </li>
+                  </ul>
+                  <br>
+                  </br>
+                  <br>
+                  </br>
                 </div>
                 <div class="moreButton">
                   <a href="https://www.epicodus.com/"><button type="button" name="button" class="btn btn-lg btn-warning">Learn More about Epicodus</button></a>
